--- a/biografia.html
+++ b/biografia.html
@@ -36,20 +36,13 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="biografia.html">Biografia</a>
+                <a class="nav-link" href="biografia.html">Biografia</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Obras
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="literatura.html">Literatura</a></li>
-                  <li><a class="dropdown-item" href="audiovisual.html">Audiovisual</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="literatura.html">Literatura</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="programa.html">Programa</a>
@@ -62,12 +55,13 @@
         </div>
       </nav>
 
+      <div class="header__banner"></div>
+  </header>
 
-      <!-- Titulo -->
-      <div class="header__banner">
-        <h1 class="header__banner--title">Alejandro Dolina</h1>
-      </div>
-    </header>
+
+  <div class="title">
+    <h1 class="title--h1">Alejandro Dolina</h1>
+  </div>
   </div>
 
 
@@ -78,45 +72,28 @@
   <div class="container biography">
     <h3 class="biography__title">Nacimiento</h3>
 
-    <p class="biography__paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, possimus laudantium in dolore accusantium cum
-      vitae nemo at excepturi. Sit eius accusantium, quae vero vel eum doloribus consectetur. Esse, omnis harum hic
-      nulla, sunt pariatur consequuntur non doloribus amet doloremque minima, dolores officia. Tempore, minus in
-      accusantium corporis vero eius? Possimus, enim accusamus. Sit velit asperiores consequuntur eos quis eligendi?
-      Quidem cum consectetur aspernatur eius magni maxime error totam assumenda laborum eveniet voluptate, omnis tempora
-      blanditiis fuga distinctio earum. Voluptatum, quibusdam. Excepturi quod architecto id non, placeat velit, sint
-      fugit laudantium sapiente ipsum ipsa iusto quam inventore perferendis molestiae sunt esse. Animi modi dolor quas
-      magni? Quia nulla assumenda fugiat dicta cupiditate? Nam sunt, tempora facilis eius quibusdam suscipit totam alias
-      similique ad recusandae, repudiandae et illo necessitatibus. Aut consequuntur eius, non placeat quibusdam facilis
-      cum laboriosam nostrum sit error doloribus quo, natus voluptatibus. Perspiciatis voluptates quod eius beatae
-      voluptas corporis velit asperiores accusamus, quidem nihil, praesentium impedit doloribus iste, error ut delectus
-      minima dolores natus dolore veniam sint sed aut odit? Harum minus expedit molestias.</p>
+    <p class="biography__paragraph">Aunque no existe una biografía oficial, ni mucho menos, sabemos algunas cosas de nuestro autor y su infancia. Como puede uno suponer, ninguno de los datos presentados en este artículo es absolutamente confiable, dada la reticencia del mencionado Alejandro a ser centro de admiración y/u homenaje. <br><br>
+
+      Dolina nació en Morse, cerca de Baigorrita, en la provincia de Buenos Aires, y pasó su primera infancia en la localidad bonaerense de Caseros. Su madre, Delfa Virginia Colombo (1922-1994), era maestra, y le inculcó, un poco por vocación y otro tanto por coincidencia obligada, el amor por la lectura y el arte. 
+      Su padre, "El Bebe" Dolina, era el contador de Plavinil Argentina. Este último, de personalidad disciplinada y rasgos característicos de un hombre de las matemáticas, le heredó a Alejandro el amor por la música, específicamente por el Tango. <br><br>
+      
+      Este amor, el deseo constante de enriquecerse junto a grandes autores y su infaltable bandoneón, lo llevarían a encontrar caminos casi inevitables desde su juventud más temprana.</p>
 
 
     <h3 class="biography__title">Formacion</h3>
 
-    <p class="biography__paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, possimus laudantium in dolore accusantium cum
-      vitae nemo at excepturi. Sit eius accusantium, quae vero vel eum doloribus consectetur. Esse, omnis harum hic
-      nulla, sunt pariatur consequuntur non doloribus amet doloremque minima, dolores officia. Tempore, minus in
-      accusantium corporis vero eius? Possimus, enim accusamus. Sit velit asperiores consequuntur eos quis eligendi?
-      Quidem cum consectetur aspernatur eius magni maxime error totam assumenda laborum eveniet voluptate, omnis tempora
-      blanditiis fuga distinctio earum. Voluptatum, quibusdam. Excepturi quod architecto id non, placeat velit, sint
-      fugit laudantium sapiente ipsum ipsa iusto quam inventore perferendis molestiae sunt esse. Animi modi dolor quas
-      magni? Quia nulla assumenda fugiat dicta cupiditate? Nam sunt, tempora facilis eius quibusdam suscipit totam alias
-      similique ad recusandae, repudiandae et illo necessitatibus. Aut consequuntur eius, non placeat quibusdam facilis
-      cum laboriosam nostrum sit error doloribus quo, molestias.</p>
+    <p class="biography__paragraph">A los 22 años, luego de algún tiempo, abandonó la carrera de Derecho en la que comenzó su juventud y estuvo desempleado. En una fiesta conoció a Manuel Evequoz quien, interesado por la fina inteligencia y el humor de Dolina, trabó amistad y le consiguió trabajo en una agencia publicitaria. Esto significó su introducción en los medios de comunicación y el descubrimiento de su vocación en el ambiente. <br> Dolina fue un gran amigo de Evequoz y en él está inspirado su personaje Manuel Mandeb. Evequoz pertenecía a Montoneros y desapareció durante la dictadura de 1976. El personaje fue creado mientras Evequoz vivía. No obstante, sus textos serían publicados en la década siguiente.<br><br>
+      Desde su juventud fue aficionado al tango, la filosofía y la literatura. La mujer tiene un rol fundamental en su discurso y aun en sus motivaciones, cuando afirma que «todo lo que hago lo hago para levantar minas». Esa cita es erróneamente atribuida a Dolina, ya que en verdad pertenece al humorista Caloi, que lo puso en boca del personaje Alexis Dolinades, inspirado en él. Dolina retoma esta afirmación en su obra “Lo que me costó el amor de Laura”(1998): «Se ha dicho que el hombre hace todo lo que hace con el único fin de enamorar mujeres».<br><br>
+      A principios de la década de 1970, Dolina inició su carrera en publicidad y escribió artículos para Satiricon, una revista que, por medio del humor, comentaba temas de la política, sociedad y estilo de vida del momento. Durante este período trabajó con Carlos Trillo, quien también se dedicaba a la publicidad y se convertiría luego en un exitoso guionista de historietas. <br><br>
+      En 1978, después de que la revista Satiricón fuese clausurada por la Junta Militar que gobernaba el país, Dolina comenzó a escribir para la revista Humor. Durante esos años, Dolina se dedicó a escribir sobre el honor, el amor, la amistad y hasta creó cierta mitología centrada en personajes como el Ángel Gris de Flores, el escritor ficticio Manuel Mandeb, y otros. Esas historias fueron publicadas en el libro Crónicas del Ángel Gris en 1987 y más tarde transformadas en un musical. Estos personajes aparecerían en todos sus libros posteriores.<br></p>
 
 
     <h3 class="biography__title">Actualidad</h3>
 
-    <p class="biography__paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, possimus laudantium in dolore accusantium cum
-      vitae nemo at excepturi. Sit eius accusantium, quae vero vel eum doloribus consectetur. Esse, omnis harum hic
-      nulla, sunt pariatur consequuntur non doloribus amet doloremque minima, dolores officia. Tempore, minus in
-      accusantium corporis vero eius? Possimus, enim accusamus. Sit velit asperiores consequuntur eos quis eligendi?
-      Quidem cum consectetur aspernatur eius magni maxime error totam assumenda laborum eveniet voluptate, omnis tempora
-      blanditiis fuga distinctio earum. Voluptatum, quibusdam. Excepturi quod architecto id non, placeat velit, sint
-      fugit laudantium sapiente ipsum ipsa iusto quam inventore perferendis molestiae sunt esse. Animi modi dolor quas
-      magni? Quia nulla assumenda fugiat dicta cupiditate? Nam sunt, tempora facilis eius quibusdam suscipit totam alias
-      similique ad recusandae, repudiandae et illo necessitatibus.</p>
+    <p class="biography__paragraph">El 2 de abril de 1985 Dolina debutó en radio al conducir un programa que se emitía por Radio El Mundo, Demasiado tarde para lágrimas, junto a Adolfo Castelo. Bajo el mismo nombre, el programa se trasladó en 1989 a Radio Rivadavia y, brevemente, durante 1991 (apenas un mes) a LRA Radio Nacional. Luego pasó a la radio Viva FM, cambiando su nombre por El ombligo del mundo. Durante 1993 continuó en FM Tango bautizado, por motivos contractuales, como La venganza será terrible, llegando a Radio Continental (1994-2000 y 2002-2006), y Radio Del Plata, donde se transmitió solamente durante 2001 mientras, a la misma hora, Radio Continental emitía programas grabados de temporadas anteriores.<br> A finales de 2006, el programa se trasladó a Radio 10, donde permanecería hasta fines de 2009. Desde febrero de 2010 a diciembre de 2011 se emitió por LRA Radio Nacional, con Patricio Barton todas las noches, y Gabriel Schultz y Jorge Dorio en forma alternada. A partir de enero de 2012 el programa se emite, ya sin Schultz, por Radio del Plata en dúplex con 360 TV. Por su trabajo en este programa Dolina ganó, en 1991, el Premio Konex al mejor conductor. <br><br>
+      Su programa de radio fue líder en su franja horaria desde el primer año de emisiones, con un encendido superior a la mitad de los radio escuchas de todo el país. Considerado ya un clásico de la radiofonía del Río de la Plata, suele hacer presentaciones en vivo del programa incluso fuera de la Ciudad de Buenos Aires. Una de las últimas funciones de 2012 se llevó a cabo en el excine de Burzaco, donde la gente del partido de Almirante Brown y de los partidos aledaños llenó el recinto y a la finalización del evento, lo ovacionó de pie. Según dice el mismo Dolina “es extraño cómo se sostiene una audiencia numéricamente tan grande en un país donde se supone que no se lee, cuando para entender mi programa al menos hay que haber hojeado dos libros”.<br> Su labor diaria es tanto una invitación a la historia y la literatura como al surrealismo. Logra hacer prosa tanto de un fragmento de la Odisea como de un decálogo de consejos para quitar mejor las manchas de la ropa. Su capacidad de improvisación como narrador, actor y músico asombra día a día. En marzo de 2013, realizó un programa especial desde el Espacio Memoria y Derechos Humanos, donde funcionara la ex Escuela de Mecánica de la Armada.<br><br>
+      En septiembre de 2016, renuncia a Radio Del Plata y Dolina aseguró que La venganza será terrible volvería en otra emisora. Desde el 16 de septiembre se emite el programa por AM 750 en su horario habitual de la medianoche y a las 20, en el que se repite el programa de la medianoche anterior, denominado La Venganza, el eterno retorno de las ocho.<br>
+      El éxito es total para Alejandro en todo el rubro del entretenimiento y el arte. En la actualidad se encuentra trabajando en teatro y, según asegura, en otra novela luego de su impresionante “Cartas Marcadas”. Cada día podemos disfrutar de su talento y ocurrencias, en su programa a partir de las 00hs. Puedes encontrar más información en el apartado “PROGRAMA” de nuestro sitio.</p>
 
   </div>
 
