--- a/programa.html
+++ b/programa.html
@@ -36,23 +36,16 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="biografia.html">Biografia</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Obras
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="literatura.html">Literatura</a></li>
-                  <li><a class="dropdown-item" href="audiovisual.html">Audiovisual</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="literatura.html">Literatura</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="programa.html">Programa</a>
+                <a class="nav-link" href="programa.html">Programa</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -62,12 +55,13 @@
         </div>
       </nav>
 
-
-    <!-- Titulo -->
-    <div class="header__banner">
-      <h1 class="header__banner--title">Alejandro Dolina</h1>
-    </div>
+      <div class="header__banner"></div>
   </header>
+
+
+  <div class="title">
+    <h1 class="title--h1">Alejandro Dolina</h1>
+  </div>
 
 
     </div>
@@ -87,8 +81,9 @@
             </iframe>
 
             <div class="showMain__section--description">
-                <p class="showMain__section--descTitle">Segmento Dispositivo</p>
-                <p class="showMain__section--descContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam odit, aperiam ratione quos cupiditate amet nam eius nemo, nisi in beatae iure! Reprehenderit similique consectetur cupiditate eum, accusantium expedita laboriosam.</p>
+                <p class="showMain__section--descTitle"><u>Segmento Dispositivo</u></p>
+                <p class="showMain__section--descContent">Este segmento es un alegre accidente que satiriza diferentes situaciones diarias de la vida de alguno de los integrantes del programa. Por lo general es Patricio Barton el blanco de tales sátiras y, a su vez, el artífice intelectual del segmento. <br>
+                  El segmento dispositivo sirve, conceptualmente, como disparador para el segmento humorístico y consecuentemente, del resto del programa.</p>
             </div>
         </section>
 
@@ -102,8 +97,9 @@
             </iframe>
 
             <div class="showMain__section--description">
-                <p class="showMain__section--descTitle">Segmento Humoristico</p>
-                <p class="showMain__section--descContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam odit, aperiam ratione quos cupiditate amet nam eius nemo, nisi in beatae iure! Reprehenderit similique consectetur cupiditate eum, accusantium expedita laboriosam.</p>
+                <p class="showMain__section--descTitle"><u>Segmento Humoristico</u></p>
+                <p class="showMain__section--descContent">El humor es el condimento esencial e infaltable de este programa. Por lo tanto este es, a caso, el más esperado de los segmentos, donde los locutores analizan y discuten sobre diferentes estudios y consejos que supuestos “profesionales” en la materia, proporcionan a sus lectores en artículos de revistas y símiles. <br>
+                  Una vez más la sátira es lo más importante a tener en cuenta al momento de escuchar este segmento para poder comprender y disfrutarlo plenamente.</p>
             </div>
         </section>
 
@@ -117,8 +113,8 @@
             </iframe>
 
             <div class="showMain__section--description">
-                <p class="showMain__section--descTitle">Segmento Historico</p>
-                <p class="showMain__section--descContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam odit, aperiam ratione quos cupiditate amet nam eius nemo, nisi in beatae iure! Reprehenderit similique consectetur cupiditate eum, accusantium expedita laboriosam.</p>
+                <p class="showMain__section--descTitle"><u>Segmento Historico</u></p>
+                <p class="showMain__section--descContent">El segmento histórico presenta diferentes relatos que llenan de cultura y enriquecen enormemente las noches de los radioescuchas. Se presentan anécdotas y hechos históricos contados por Alejandro en forma de relatos sumamente interesantes y plagados de curiosidades.</p>
             </div>
         </section>
 
@@ -128,8 +124,9 @@
           <iframe class="showMain__section--video" width="560" height="315" src="https://www.youtube.com/embed/-wuJyLWowNI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
           <div class="showMain__section--description">
-              <p class="showMain__section--descTitle">El Show del Sordo Gance</p>
-              <p class="showMain__section--descContent">El ansiado show del Sordo Gance es uno de los principales atractivos de cada experiencia del programa. </p>
+              <p class="showMain__section--descTitle"><u>Show del Sordo Gance</u></p>
+              <p class="showMain__section--descContent">Probablemente lo más buscado por los amantes del arte. El segmento musical, al que se une el “Trío sin nombre” (grupo musical compuesto por Manuel Moreira, Alejandro y Martín, los hijos de Dolina), es la principal presentación del “Sordo” Gancé, un prolífico personaje que Alejandro inventó e interpretó en uno de los programas de radio que integró en su temprana juventud. <br>
+                Allí también participa Gillespie con su nunca higiénica trompeta, y casualmente algunos invitados.</p>
           </div>
       </section>
 
