--- a/contacto.html
+++ b/contacto.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Pagina de contacto del autor del sitio">
-  <meta name="keywords" 
-  content="homenaje, contacto, autor, email, dolina">
+  <meta name="keywords" content="homenaje, contacto, autor, email, dolina">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -36,115 +35,120 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="biografia.html">Biografia</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Obras
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="literatura.html">Literatura</a></li>
-                  <li><a class="dropdown-item" href="audiovisual.html">Audiovisual</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="literatura.html">Literatura</a>
+              </li>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="programa.html">Programa</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
 
+      <div class="header__banner"></div>
+    </header>
 
-    <!-- Titulo -->
-    <div class="header__banner">
-      <h1 class="header__banner--title">Alejandro Dolina</h1>
-    </div>
-  </header>
 
+    <div class="title">
+      <h1 class="title--h1">Alejandro Dolina</h1>
     </div>
-    <h2 class="subtitlePages">Contactenos</h2>
+
+  </div>
+  <h2 class="subtitlePages">Contactenos</h2>
+  <div class="container contactus--contentForm">
     <form id="contactForm" action="#" method="GET">
 
-        <label for="nameBox">Nombre/s*: </label>
-        <input type="text" name="nameBox" required>
+      <label for="nameBox">Nombre/s*: </label>
+      <input type="text" name="nameBox" required>
 
-        <br><br>
+      <br><br>
 
-        <label for="lastNameBox">Apellido*: </label>
-        <input type="text" name="lastNameBox" required>
+      <label for="lastNameBox">Apellido*: </label>
+      <input type="text" name="lastNameBox" required>
 
-        <br><br>
+      <br><br>
 
-        <label for="birthBox" required>Fecha de nacimiento*: </label>
-        <input type="date" name="birthBox" id="birthBox">
+      <label for="birthBox" required>Fecha de nacimiento*: </label>
+      <input type="date" name="birthBox" id="birthBox">
 
-        <br><br>
+      <br><br>
 
-        <label for="countryBox">Lugar*: </label>
-        <select name="pais" id="pais" required>
-            <option selected value="0">- - -</option>
-            <option value="arg">Argentina</option>
-            <option value="uru">Uruguay</option>
-            <option value="par">Paraguay</option>
-            <option value="chi">Chile</option>
-            <option value="esp">España</option>
-            <option value="otro">Otro</option>
-        </select>
+      <label for="countryBox">Lugar*: </label>
+      <select name="pais" id="pais" required>
+        <option selected value="0">- - -</option>
+        <option value="arg">Argentina</option>
+        <option value="uru">Uruguay</option>
+        <option value="par">Paraguay</option>
+        <option value="chi">Chile</option>
+        <option value="esp">España</option>
+        <option value="otro">Otro</option>
+      </select>
 
-        <br><br>
+      <br><br>
 
-        <label for="email" required>Email*: </label>
-        <input type="email" name="emailBox" id="emailBox" placeholder="ejemplo@ejemplo.com">
+      <label for="email" required>Email*: </label>
+      <input type="email" name="emailBox" id="emailBox" placeholder="ejemplo@ejemplo.com">
 
-        <br><br>
+      <br><br>
 
-        <label for="questionsBox">Incluye tus comentarios/consultas aqui: </label>
+      <label for="questionsBox">Incluye tus comentarios/consultas aqui: </label>
 
-        <br>
+      <br>
 
-        <textarea name="questionsBox" id="questionsBox" cols="30" rows="10"></textarea>
+      <textarea name="questionsBox" id="questionsBox" cols="30" rows="10"></textarea>
 
-        <br>
+      <br>
 
-        <p>* Campos obligatorios.</p>
+      <p>* Campos obligatorios.</p>
 
-        <br>
+      <br>
 
-        <input type="checkbox" name="newsletter">
-        <label for="newsletter">Quiero recibir el boletin mensual por correo electronico.</label>
+      <input type="checkbox" name="newsletter">
+      <label for="newsletter">Quiero recibir el boletin mensual por correo electronico.</label>
 
-        <br><br>
+      <br><br>
 
-        <input type="reset" name="buttonReset" id="buttonReset" value="Borrar">
-        <input type="submit" name="buttonSub" id="buttonSub" value="Enviar">
+      <input type="reset" name="buttonReset" id="buttonReset" value="Borrar">
+      <input type="submit" name="buttonSub" id="buttonSub" value="Enviar">
 
     </form>
+  </div>
   <footer class="footer">
     <!--Datos del autor-->
-    <p class="footer__author">&#169 <a class="footer__author--links"  href="https://www.linkedin.com/in/alan-scalia/" target="_blank">Alan Scalia
+    <p class="footer__author">&#169 <a class="footer__author--links" href="https://www.linkedin.com/in/alan-scalia/"
+        target="_blank">Alan Scalia
         2021, todos los derechos reservados.</a></p>
 
     <ul class="footer__list">
       <!-- Links relacionados con el contenido del sitio-->
-      <li class="footer__list--items"><a class="footer__list--links" href="https://www.instagram.com/alejandrodolinaoficial/" target="_blank"><img class="footer__list--icons" src="media/ig_icon.svg" alt="ig_icon"></a></li>
-      <li class="footer__list--items"><a class="footer__list--links" href="https://www.facebook.com/LaVenganzaRadio" target="_blank"><img class="footer__list--icons" src="media/fb_icon.svg" alt="fb_icon"></a></li>
-      <li class="footer__list--items"><a class="footer__list--links" href="https://twitter.com/negrodolina" target="_blank"><img class="footer__list--icons" src="media/twitter_icon.svg" alt="twitter_icon"></a></li>
-      <li class="footer__list--items"><a class="footer__list--links" href="https://www.youtube.com/channel/UCIWM1zdilm5l1o94hN1E9ZA" target="_blank"><img class="footer__list--icons" src="media/ytube_icon.svg" alt="youtube_icon"></a></li>
-      <li class="footer__list--items"><a class="footer__list--links" href="https://venganzasdelpasado.com.ar/" target="_blank"><img class="footer__list--icons" src="media/google_icon.svg" alt="web_icon"></a></li>
+      <li class="footer__list--items"><a class="footer__list--links"
+          href="https://www.instagram.com/alejandrodolinaoficial/" target="_blank"><img class="footer__list--icons"
+            src="media/ig_icon.svg" alt="ig_icon"></a></li>
+      <li class="footer__list--items"><a class="footer__list--links" href="https://www.facebook.com/LaVenganzaRadio"
+          target="_blank"><img class="footer__list--icons" src="media/fb_icon.svg" alt="fb_icon"></a></li>
+      <li class="footer__list--items"><a class="footer__list--links" href="https://twitter.com/negrodolina"
+          target="_blank"><img class="footer__list--icons" src="media/twitter_icon.svg" alt="twitter_icon"></a></li>
+      <li class="footer__list--items"><a class="footer__list--links"
+          href="https://www.youtube.com/channel/UCIWM1zdilm5l1o94hN1E9ZA" target="_blank"><img
+            class="footer__list--icons" src="media/ytube_icon.svg" alt="youtube_icon"></a></li>
+      <li class="footer__list--items"><a class="footer__list--links" href="https://venganzasdelpasado.com.ar/"
+          target="_blank"><img class="footer__list--icons" src="media/google_icon.svg" alt="web_icon"></a></li>
     </ul>
   </footer>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
+    </script>
 </body>
 
 </html>
