--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;1,300&display=swap"
     rel="stylesheet">
-  <title>Alejandro Dolina - Un anti-homenaje</title>
+  <title>Alejandro Dolina</title>
 </head>
 
 <body>
@@ -42,15 +42,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="biografia.html">Biografia</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Obras
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="literatura.html">Literatura</a></li>
-                  <li><a class="dropdown-item" href="audiovisual.html">Audiovisual</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="literatura.html">Literatura</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="programa.html">Programa</a>
@@ -63,15 +56,17 @@
         </div>
       </nav>
 
-
-    <!-- Titulo -->
-    <div class="header__banner">
-      <h1 class="header__banner--title">Alejandro Dolina</h1>
-    </div>
+      <div class="header__banner"></div>
   </header>
 
+
+  <div class="title">
+    <h1 class="title--h1">Alejandro Dolina</h1>
+  </div>
+
+
     <main class="main">
-      <div class="main__musicPlayer">
+      <div class="main__musicPlayer subtitlePages">
         <audio class="main__musicPlayer--controls" controls autoplay>
           <source src="/media/ambient_music.mp3" type="audio/mp3">
         </audio>
@@ -103,6 +98,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          
 
         </div>
 
@@ -118,6 +114,7 @@
           <p class="main__homeParagraph--quoteSource">-"Cartas Marcadas", Alejandro Dolina.</p>
         </div>
       </div>
+      
 
     </main>
   </div>
