--- a/literatura.html
+++ b/literatura.html
@@ -37,20 +37,13 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="biografia.html">Biografia</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Obras
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="literatura.html">Literatura</a></li>
-                  <li><a class="dropdown-item" href="audiovisual.html">Audiovisual</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="literatura.html">Literatura</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="programa.html">Programa</a>
@@ -63,12 +56,13 @@
         </div>
       </nav>
 
+      <div class="header__banner"></div>
+  </header>
 
-      <!-- Titulo -->
-      <div class="header__banner">
-        <h1 class="header__banner--title">Alejandro Dolina</h1>
-      </div>
-    </header>
+
+  <div class="title">
+    <h1 class="title--h1">Alejandro Dolina</h1>
+  </div>
 
 
     <h2 class="subtitlePages">Obras Literarias</h2>
