--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <main class="main">
       <div class="main__musicPlayer subtitlePages">
         <audio class="main__musicPlayer--controls" controls autoplay>
-          <source src="/media/ambient_music.mp3" type="audio/mp3">
+          <source src="media/ambient_music.mp3" type="audio/mp3">
         </audio>
       </div>
 
